Font and Graphical Update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Home</title>
+    <title>vhhacks 2020</title>
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="shortcut icon" type="image/ico" href="images/LOGOblue.png" />
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#" class="navbar-brand logo">
-                    <h2>vhhacks</h2>
+                    <img src="images/homeicon.png" class = "d-inline-block">
                 </a>
             </div>
             <!--Logo/-->
@@ -79,8 +79,8 @@
         <div class="absolute anlge-bg"></div>
         <div class="container">
             <div class="row v-center">
-                <div class="col-xs-12 col-md-7 header-text">
-                    <h2>Vancouver High School Hackathons</h2>
+                <div class="col-xs-12 col-md-12 header-text text-center">
+                    <h2>vhhacks 2020.</h2>
                     <p>Learn, Explore, Build your future. Everyone is welcome! </p>
                     <a href="#" class="button white">Register Now!</a>
                 </div><!--
