Add logo, change icon, make text vhHacks instead of vhhacks

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>vhhacks 2020</title>
+    <title>vhHacks 2020</title>
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="shortcut icon" type="image/ico" href="images/LOGOblue.png" />
@@ -80,7 +80,8 @@
         <div class="container">
             <div class="row v-center">
                 <div class="col-xs-12 col-md-12 header-text text-center">
-                    <h2>vhhacks 2020.</h2>
+                    <img src="images/vhhacksclear.png" style="height:30vh">
+                    <h2>vhHacks 2020.</h2>
                     <p>Learn, Explore, Build your future. Everyone is welcome! </p>
                     <a href="#" class="button white">Register Now!</a>
                 </div><!--
@@ -704,6 +705,7 @@
 
     <footer class="footer-area relative" id="contact-page">
         <div class="absolute footer-bg"></div>
+        <!--
         <div class="footer-top">
             <div class="container">
                 <div class="row">
@@ -774,7 +776,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
