--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
                     <div class="page-title">
                         <h2>Frequently Asked Questions</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit voluptates, temporibus at, facere harum fugiat!</p>
+                        <p>Have something on your mind? Check below!</p>
                     </div>
                 </div>
             </div>
@@ -232,6 +232,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class = "row" style="padding-top: 50px">
+                <p class = "text-center">Couldn't find an answer? Send your question to <a href="mailto:contact@vhhacks.ca" style="color: #6effff">contact@vhhacks.ca</a></p>
             </div>
         </div>
     </section>
