Add exclamation mark to nav bar text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li><a href="#faq-page">FAQ</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
                     <li><a href="#partners">Partners</a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Sign up!</a></li>
                 </ul>
             </nav>
         </div>
