Temporary FAQ questions

--- a/index.html
+++ b/index.html
@@ -83,26 +83,7 @@
                     <h2>vhHacks 2020.</h2>
                     <p>Learn, Explore, Build your future. Everyone is welcome! </p>
                     <a href="#" class="button white">Register Now!</a>
-                </div><!--
-                <div class="hidden-xs hidden-sm col-md-5 text-right">
-                    <div class="screen-box screen-slider">
-                        <div class="item">
-                            <img src="images/screen-1.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img src="images/screen-2.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img src="images/screen-3.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img src="images/screen-4.jpg" alt="">
-                        </div>
-                        <div class="item">
-                            <img src="images/screen-5.jpg" alt="">
-                        </div>
-                    </div>
-                </div>-->
+                </div>
             </div>
         </div>
     </header>
@@ -200,34 +181,39 @@
                     <div class="panel-group" id="accordion">
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true">Sedeiusmod tempor inccsetetur aliquatraiy?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true">Can I attend?</a>
                             </h4>
                             <div id="collapse1" class="panel-collapse collapse in">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrd exercitation ullamco laboris nisi ut aliquip ex comodo consequat. Duis aute dolor in reprehenderit.</p>
+                                <p>Of course! vhHacks is open to all high school students of all skill levels. Whether you've already been in many hackathons before, and you're
+                                    pursuing computer science, or an absolute beginner, we welcome you all! Artists, musicians, athletes, gamers, everyone!
+                                    If you're older (post-secondary or above) and have experience in computer science, apply to be a mentor!</p>
                             </div>
                         </div>
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">Tempor inccsetetur aliquatraiy?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">How much does it cost?</a>
                             </h4>
                             <div id="collapse2" class="panel-collapse collapse">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrd exercitation ullamco laboris nisi ut aliquip ex comodo consequat. Duis aute dolor in reprehenderit.</p>
+                                <p>Nothing! vhHacks is completely free of charge at the event. However, if you are booking a stay near the event, or taking public transport, those will cost money.</p>
                             </div>
                         </div>
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">Lorem ipsum dolor amet, consectetur adipisicing ?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">What is a hackathon?</a>
                             </h4>
                             <div id="collapse3" class="panel-collapse collapse">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrd exercitation ullamco laboris nisi ut aliquip ex comodo consequat. Duis aute dolor in reprehenderit.</p>
+                                <p>A hackathon is what you make of it! All participants are encouraged to use the 24 hours to solve a problem using technology, whether that's making the solution itself, marketing
+                                    it through a website, or investigating new approaches. We are also a learning environment, and an opportunity to try and learn new things! Haven't touched website design
+                                    before? Try your hand at HTML. Want to learn how to use an arduino? Try some new hardware! No experience is required to attend.</p>
                             </div>
                         </div>
                         <div class="panel">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Lorem ipsum dolor amet, consectetur adipisicing ?</a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">Will there be food?</a>
                             </h4>
                             <div id="collapse4" class="panel-collapse collapse">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodas temporo incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrd exercitation ullamco laboris nisi ut aliquip ex comodo consequat. Duis aute dolor in reprehenderit.</p>
+                                <p>Yes. Food and snacks are provided throughout the event, even overnight! (We know you night owls get the munchies) There are also restaurants around the venue to buy food and snacks,
+                                    and you can always bring your own!</p>
                             </div>
                         </div>
                     </div>
