--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/portfolio-icon-1.png" alt="">
+                            <img src="images/nwplus.png" style="height:175px" alt="">
                         </div>
                     </div>
                 </div>
