Added link to nwplus partnership badge

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="box">
                         <div class="box-icon">
-                            <img src="images/nwplus.png" style="height:175px" alt="">
+                            <a href="https://www.facebook.com/nwplusubc/"><img src="images/nwplus.png" style="height:175px" alt=""></a>
                         </div>
                     </div>
                 </div>
