fix font scaling and position

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
         <div class="absolute anlge-bg"></div>
         <div class="container">
             <div class="row v-center">
-                <div class="col-xs-12 col-md-12 header-text text-center">
+                <div class="col-xs-2 col-md-2"></div>
+                <div class="col-xs-8 col-md-8 header-text text-center">
                     <img src="images/vhhacksclear.png" style="height:30vh">
                     <h2>vhHacks 2020.</h2>
                     <p>Learn, Explore, Build your future. Everyone is welcome! </p>
-                    <a href="#" class="button white">Register Now!</a>
+                    <a href="#" class="button white" style="font-size:30px">Register Now!</a>
                 </div>
+                <div class="col-xs-2 col-md-2"></div>
             </div>
         </div>
     </header>
