Change button colours

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img src="images/vhhacksclear.png" style="height:30vh">
                     <h2>vhHacks 2020.</h2>
                     <p>Learn, Explore, Build your future. Everyone is welcome! </p>
-                    <a href="#" class="button white" style="font-size:30px">Register Now!</a>
+                    <a href="#" class="button" style="font-size:30px">Register Now!</a>
                 </div>
                 <div class="col-xs-2 col-md-2"></div>
             </div>
