navbar hide on scroll

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <!--Mainmenu-area-->
-    <div class="mainmenu-area" data-spy="affix" data-offset-top="100">
+    <div class="mainmenu-area" data-spy="affix" data-offset-top="100" id="navbar">
         <div class="container">
             <!--Logo-->
             <div class="navbar-header">
@@ -81,8 +81,8 @@
                 <div class="col-xs-2 col-md-2"></div>
                 <div class="col-xs-8 col-md-8 header-text text-center">
                     <img src="images/vhhacksclear.png" style="height:30vh">
-                    <h2>vhHacks 2020.</h2>
-                    <p>Learn, Explore, Build your future. Everyone is welcome! </p>
+                    <h2>vhHacks 2020</h2>
+                    <p>March 13 - 14, 2020 <br> @ The University of British Columbia</p>
                     <a href="#" class="button" style="font-size:30px">Register Now!</a>
                 </div>
                 <div class="col-xs-2 col-md-2"></div>
@@ -342,6 +342,7 @@
     <script src="js/wow.min.js"></script>
     <!--Main-active-JS-->
     <script src="js/main.js"></script>
+    <script src="js/navbarscroll.js"></script>
 </body>
 
 </html>
