changed footer to double line to avoid overlap

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center">
-                        <p>&copy;Copyright 2018 All right reserved.  This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></p>
+                        <p>&copy;Copyright 2018 All right reserved. <br>This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></p>
                     </div>
                 </div>
             </div>
