Add headers and more faq

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8">
+                    <h2>General Information</h2>
                     <div class="panel-group" id="accordion">
                         <div class="panel">
                             <h4 class="panel-title">
@@ -256,6 +257,45 @@
                                             href="https://learningspaces.ubc.ca/classrooms/henn-200">here</a> and
                                     directions <a
                                             href="https://www.google.ca/maps/dir//Hennings+Building,+Hennings+Bldg,+Vancouver,+BC+V6T+1Z1/@49.2664798,-123.2543775,17z/data=!4m16!1m6!3m5!1s0x548672b6f5321131:0x1877a1f004691be!2sHennings+Building!8m2!3d49.2664763!4d-123.2521888!4m8!1m0!1m5!1m1!1s0x548672b6f5321131:0x1877a1f004691be!2m2!1d-123.2521888!2d49.2664763!3e3">here.</a>
+                                </p>
+                            </div>
+                        </div>
+                        <h2>Teams</h2>
+                        <div class="panel">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">How big can my team
+                                    be?</a>
+                            </h4>
+                            <div id="collapse7" class="panel-collapse collapse">
+                                <p>
+                                    Teams are usually 2-4 people in size. Teams bigger than 4 will be split up into
+                                    smaller ones, since larger teams aren't usually the best solution for a 24 hour
+                                    event.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="panel">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">What happens if I
+                                    don't have a team?</a>
+                            </h4>
+                            <div id="collapse8" class="panel-collapse collapse">
+                                <p>
+                                    No worry! A lot of other hackers are in the same position. vhHacks staff will help
+                                    you find other teammates and provide you with opportunities to find others!
+                                </p>
+                            </div>
+                        </div>
+                        <h2>At the Event</h2>
+                        <div class="panel">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse9">What should I
+                                    bring?</a>
+                            </h4>
+                            <div id="collapse9" class="panel-collapse collapse">
+                                <p>
+                                    Since vhHacks is a 24 hour event, prepare to stay overnight! Food is provided at the
+                                    event, so don't worry about that.
                                 </p>
                             </div>
                         </div>
