--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
                             </h4>
                             <div id="collapse6" class="panel-collapse collapse">
                                 <p>vhHacks will be taking place at the UBC Hennings building in room 200. You can find
-                                    details to the map <a
+                                    details about the room <a
                                             href="https://learningspaces.ubc.ca/classrooms/henn-200">here</a> and
-                                    directions <a
+                                    directions to the venue <a
                                             href="https://www.google.ca/maps/dir//Hennings+Building,+Hennings+Bldg,+Vancouver,+BC+V6T+1Z1/@49.2664798,-123.2543775,17z/data=!4m16!1m6!3m5!1s0x548672b6f5321131:0x1877a1f004691be!2sHennings+Building!8m2!3d49.2664763!4d-123.2521888!4m8!1m0!1m5!1m1!1s0x548672b6f5321131:0x1877a1f004691be!2m2!1d-123.2521888!2d49.2664763!3e3">here.</a>
                                 </p>
                             </div>
