Fix button scaling on mobile

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="images/vhhacksclear.png" style="height:30vh">
                 <h2>vhHacks 2020</h2>
                 <p>March 14 - 15, 2020 <br> @ The University of British Columbia</p>
-                <a href="#" class="button" style="font-size:30px">Register Now!</a>
+                <a href="#" class="button" >Register Now!</a>
             </div>
             <div class="col-xs-2 col-md-2"></div>
         </div>
