Fix link colours, add spacing to faq

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8">
-                    <h2>General Information</h2>
+                    <h2 style="padding-top:30px;">General Information</h2>
                     <div class="panel-group" id="accordion">
                         <div class="panel">
                             <h4 class="panel-title">
@@ -260,7 +260,7 @@
                                 </p>
                             </div>
                         </div>
-                        <h2>Teams</h2>
+                        <h2 style="padding-top:30px;">Teams</h2>
                         <div class="panel">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">How big can my team
@@ -286,7 +286,7 @@
                                 </p>
                             </div>
                         </div>
-                        <h2>At the Event</h2>
+                        <h2 style="padding-top:30px;">At the Event</h2>
                         <div class="panel">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#collapse9">What should I
@@ -304,7 +304,7 @@
             </div>
             <div class="row" style="padding-top: 50px">
                 <p class="text-center">Couldn't find an answer? Send your question to <a
-                        href="mailto:contact@vhhacks.ca" style="color: #6effff">contact@vhhacks.ca</a></p>
+                        href="mailto:contact@vhhacks.ca">contact@vhhacks.ca</a></p>
             </div>
         </div>
     </section>
